Object Font Text Rendering Bug #40839

Closed
opened 2014-06-27 12:08:10 +02:00 by Rumen Belev · 11 comments

System Information
Windows 7 and Nvidia

Blender Version
Broken: (example: 2.71 9337574, see splash screen)

Short description of error

Using Objects as font characters in Text Object do not render (or not visible in render) if not used specific steps in assigning the objects as characters.

Exact steps for others to reproduce the error

Sequence of steps that fail objects to render

  1. Create Text Object. Type "a"
  2. Create Bezier Object. Name it "chr_a"
  3. For Text object enter "chr_" in Object Font field and enable Vertex Duplication.
  4. Render
    (Text Object is not rendered)

Sequence of steps that fail objects to render

  1. Create Bezier Object. Name it "chr_a"
  2. Create Text Object. Type "a"
  3. For Text object enter "chr_" in Object Font field and enable Vertex Duplication.
  4. Render
    (Text Object is rendered)

In short steps 1 and 2 are interchanged in above cases and produce different results.

Based on a (as simple as possible) attached .blend file with minimum amount of steps:
Object_Text_Bug.blend
http://dox.bg/files/dw?a=3b90c90005

In the blend file there are 2 Text Objects that have the same settings but render differently.

**System Information** Windows 7 and Nvidia **Blender Version** Broken: (example: 2.71 9337574, see splash screen) **Short description of error** Using Objects as font characters in Text Object do not render (or not visible in render) if not used specific steps in assigning the objects as characters. **Exact steps for others to reproduce the error** Sequence of steps that fail objects to render 1. Create Text Object. Type "a" 2. Create Bezier Object. Name it "chr_a" 3. For Text object enter "chr_" in Object Font field and enable Vertex Duplication. 4. Render (Text Object is not rendered) Sequence of steps that fail objects to render 1. Create Bezier Object. Name it "chr_a" 2. Create Text Object. Type "a" 3. For Text object enter "chr_" in Object Font field and enable Vertex Duplication. 4. Render (Text Object is rendered) In short steps 1 and 2 are interchanged in above cases and produce different results. Based on a (as simple as possible) attached .blend file with minimum amount of steps: Object_Text_Bug.blend http://dox.bg/files/dw?a=3b90c90005 In the blend file there are 2 Text Objects that have the same settings but render differently.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @syziph

Added subscriber: @syziph
Author

Removed subscriber: @syziph

Removed subscriber: @syziph
Author

Added subscriber: @syziph

Added subscriber: @syziph

Added subscriber: @mont29

Added subscriber: @mont29

Sounds like a depsgraph issue, maybe? Strange thing is that even a file reload does not seem to fix it!

Sounds like a depsgraph issue, maybe? Strange thing is that even a file reload does not seem to fix it!
Sergey Sharybin self-assigned this 2014-07-21 13:36:00 +02:00

Added subscriber: @zeauro

Added subscriber: @zeauro

It renders if bezier object is child of text.

It renders if bezier object is child of text.

This issue was referenced by 6a2cefc061

This issue was referenced by 6a2cefc061ec3805ce3f47bf76b728943fb2e4a7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6a2cefc061.

Closed by commit 6a2cefc061.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40839
No description provided.